# xv

./: .env.example  .env.testing  docker-compose.yml
.circleci/: config.yml
containers/django/: Dockerfile  wait-for-mysql.sh
containers/nginx/: xv_nginx.conf
src/: manage.py  pyproject.toml
src/common/: admin.py  models.py
src/master/: admin.py  apps.py  models.py
src/master/migrations/: 0001_initial.py  0002_scoringmethod_short_letter.py
src/match/: admin.py  apps.py  models.py
src/match/migrations/: 0001_initial.py
src/member/: admin.py  apps.py  models.py
src/member/migrations/: 0001_initial.py  0002_auto_20190810_0213.py  0003_auto_20190810_0216.py  0004_auto_20190810_0236.py  0005_auto_20190810_0238.py
src/rugby/: models.py
src/rugby/migrations/: 0001_initial.py  0002_auto_20190809_0127.py  0003_auto_20190810_0053.py
src/xv_rugby/: django.ini  settings.py  urls.py  wsgi.py
