[tool.poetry]
name = "xv-rugby"
version = "0.1.0"
description = "CMS For Rugby"
authors = ["Nagatatz <nagata.hbdc@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "=2.2"
uwsgi = "^2.0"
mysqlclient = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
